Fix: Apply scrollbar styling to pages
Apply the same scrollbar styling defined in index.css to the pages.

--- a/src/index.css
+++ b/src/index.css
@@ -110,8 +110,8 @@
   
   /* Style scrollbar for Chrome, Safari and Opera */
   *::-webkit-scrollbar {
-    width: 6px;
-    height: 6px;
+    width: 1.5px;
+    height: 1.5px;
     display: block;
   }
 
@@ -121,7 +121,8 @@
 
   *::-webkit-scrollbar-thumb {
     background-color: rgba(0, 0, 0, 0.2);
-    border-radius: 3px;
+    border-radius: 0;
+    opacity: 0.7;
   }
 
   *::-webkit-scrollbar-thumb:hover {
